🛠 FIX: Feed.xml author, Title that are too long now use word-break

--- a/_sass/components/_listing.scss
+++ b/_sass/components/_listing.scss
@@ -2,6 +2,7 @@
   &-title {
     letter-spacing: -0.2rem;
     margin: 0;
+    word-break: break-word;
 
     a {
       @extend .remove-default-hover;
